--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@0xalexbel/FHEMinesweeper",
+  "name": "fhe-minesweeper",
   "description": "FHEMinesweeper",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -63,7 +63,11 @@
     "typechain": "^8.2.0",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.1",
-    "web3-validator": "^2.0.6"
+    "web3-validator": "^2.0.6",
+    "cli-progress": "^3.12.0",
+    "@types/cli-progress": "^3.11.6",
+    "@types/express":"^5.0.0",
+    "@types/cors":"^2.8.17"
   },
   "files": [
     "contracts"
@@ -89,12 +93,11 @@
     "lint:sol": "solhint --max-warnings 25 \"contracts/**/*.sol\"",
     "lint:ts": "eslint .",
     "postinstall": "DOTENV_CONFIG_PATH=./.env.example pnpm typechain",
-    "prettier:check": "prettier --check \"**/*.{js,json,md,sol,ts,yml}\"",
-    "prettier:write": "prettier --write \"**/*.{js,json,md,sol,ts,yml}\"",
+    "prettier:check": "prettier --check \"**/*.{js,md,sol,ts,yml}\"",
+    "prettier:write": "prettier --write \"**/*.{js,md,sol,ts,yml}\"",
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
     "test": "hardhat test --network hardhat",
     "coverage": "hardhat coverage",
-    "deploy-sepolia": "hardhat deploy --network sepolia --tags FHEMinesweeper",
-    "mint-sepolia": "hardhat mint --amount 42 --network sepolia"
+    "deploy-sepolia": "hardhat deploy --network sepolia --tags FHEMinesweeper"
   }
 }
